--- a/result.html
+++ b/result.html
@@ -97,7 +97,7 @@
 </body>
 <script>
     function backHome(argument) {
-        google.script.run.switchpage(2);
+        google.script.run.showSidebar();
     }
 </script>
 </html>
